lib/paths:75 function save : (path, username) => (path, {options}) 
lib/paths:   function removeByPath => remove
lib/paths:   function remove_path
lib/paths:   function find => get
lib/paths:   function byUser => user.paths()
lib/user:   function paths => cb(docs)
lib/files: files byUser => user.files()
lib/files/albums => byID => get()
albums.save => {albums : []} => {} | []