@@ -21,43 +21,40 @@ var paths = {
 	        done(false)
 	    })
 	},
-
-	/**
-	 * get all paths
-	 * @callback  {Function} cb(err, docs)
-	 */
-	getAll : function(cb) {
-		Paths.find().lean().exec(cb)
-	},
 	
-	get : function(id, cb) {
-		Paths.findById(id).populate('movies albums others').lean().exec(function (err, docs) {
-			//mongoose plugin ?
-			Movies.populate(
-				docs,
-				{ 
-					path: 'movies.infos',
-					model: 'MoviesInformations',
-					select: '-_id -__v',
-					options: {lean: true}
-				}, 
-				function(err, path) {
-					
-					//workarroung for getting back all
-					//the movies informations back to movie root node
-					//should it be improved in the rest of the code ?
-					_.each(docs.movies, function(d, i) {
-						if(typeof d.infos == 'object') {
-							_.each(d.infos, function(e, j) {
-								docs.movies[i][j] = e
-							})
-						}
-					})
+	get: function(id, cb) {
+		if(typeof id == 'function')
+			Paths.find().lean().exec(id)
+		else {
 
-					cb(err, docs)		
-				}
-			)
-		})
+			Paths.findById(id).populate('movies albums others').lean().exec(function (err, docs) {
+				//mongoose plugin ?
+				Movies.populate(
+					docs,
+					{ 
+						path: 'movies.infos',
+						model: 'MoviesInformations',
+						select: '-_id -__v',
+						options: {lean: true}
+					}, 
+					function(err, path) {
+						
+						//workarroung for getting back all
+						//the movies informations back to movie root node
+						//should it be improved in the rest of the code ?
+						_.each(docs.movies, function(d, i) {
+							if(typeof d.infos == 'object') {
+								_.each(d.infos, function(e, j) {
+									docs.movies[i][j] = e
+								})
+							}
+						})
+
+						cb(err, docs)		
+					}
+				)
+			})
+		}
 	},
 	/**
 	 * Save path to database
@@ -65,7 +62,7 @@ var paths = {
 	 * @param {String}   options   optional
 	 * @callback {Function} cb       [description]
 	 */
-	save : function(path, options, cb) {
+	save: function(path, options, cb) {
 		var user = require('./user')
 
 		if(typeof options == 'function') {
